// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`$include > Query 1`] = `
"
{
  "object": {
    "$include": true,
    "id": true
  }
}
--------------
{
  object @include(if: true) {
    id
  }
}
"
`;

exports[`$include > Query 2`] = `
"
{
  "object": {
    "$include": false,
    "id": true
  }
}
--------------
{
  object @include(if: false) {
    id
  }
}
"
`;

exports[`$include > Query 3`] = `
"
{
  "object": {
    "id": true
  }
}
--------------
{
  object {
    id
  }
}
"
`;

exports[`$include > Query 4`] = `
"
{
  "object": {
    "$include": {
      "if": true
    },
    "id": true
  }
}
--------------
{
  object @include(if: true) {
    id
  }
}
"
`;

exports[`$include > Query 5`] = `
"
{
  "object": {
    "$include": {
      "if": false
    },
    "id": true
  }
}
--------------
{
  object @include(if: false) {
    id
  }
}
"
`;

exports[`$include > Query 6`] = `
"
{
  "object": {
    "$include": {},
    "id": true
  }
}
--------------
{
  object @include(if: true) {
    id
  }
}
"
`;

exports[`$include > Query 7`] = `
"
{
  "object": {
    "$include": {},
    "id": true
  }
}
--------------
{
  object @include(if: true) {
    id
  }
}
"
`;

exports[`$skip > Query 1`] = `
"
{
  "object": {
    "$skip": true,
    "id": true
  }
}
--------------
{
  object @skip(if: true) {
    id
  }
}
"
`;

exports[`$skip > Query 2`] = `
"
{
  "object": {
    "$skip": false,
    "id": true
  }
}
--------------
{
  object @skip(if: false) {
    id
  }
}
"
`;

exports[`$skip > Query 3`] = `
"
{
  "object": {
    "id": true
  }
}
--------------
{
  object {
    id
  }
}
"
`;

exports[`$skip > Query 4`] = `
"
{
  "object": {
    "$skip": {
      "if": true
    },
    "id": true
  }
}
--------------
{
  object @skip(if: true) {
    id
  }
}
"
`;

exports[`$skip > Query 5`] = `
"
{
  "object": {
    "$skip": {
      "if": false
    },
    "id": true
  }
}
--------------
{
  object @skip(if: false) {
    id
  }
}
"
`;

exports[`$skip > Query 6`] = `
"
{
  "object": {
    "$skip": {},
    "id": true
  }
}
--------------
{
  object @skip(if: true) {
    id
  }
}
"
`;

exports[`$skip > Query 7`] = `
"
{
  "object": {
    "$skip": {},
    "id": true
  }
}
--------------
{
  object @skip(if: true) {
    id
  }
}
"
`;

exports[`args > Query 1`] = `
"
{
  "stringWithArgs": {
    "$": {
      "boolean": true,
      "float": 1
    }
  }
}
--------------
{
  stringWithArgs(boolean: true, float: 1)
}
"
`;

exports[`args > Query 2`] = `
"
{
  "stringWithArgs": {
    "$": {}
  }
}
--------------
{
  stringWithArgs
}
"
`;

exports[`args > Query 3`] = `
"
{
  "objectWithArgs": {
    "$": {
      "id": ""
    },
    "id": true
  }
}
--------------
{
  objectWithArgs(id: "") {
    id
  }
}
"
`;

exports[`args > Query 4`] = `
"
{
  "objectWithArgs": {
    "$": {},
    "id": true
  }
}
--------------
{
  objectWithArgs {
    id
  }
}
"
`;

exports[`other > Query 1`] = `
"
{
  "string": true
}
--------------
{
  string
}
"
`;

exports[`other > Query 2`] = `
"
{
  "string": 1
}
--------------
{
  string
}
"
`;

exports[`other > Query 3`] = `
"
{
  "id": true,
  "string": false
}
--------------
{
  id
}
"
`;

exports[`other > Query 4`] = `
"
{
  "id": true,
  "string": 0
}
--------------
{
  id
}
"
`;

exports[`other > Query 5`] = `
"
{
  "id": true
}
--------------
{
  id
}
"
`;

exports[`other > Query 6`] = `
"
{
  "object": {
    "id": true
  }
}
--------------
{
  object {
    id
  }
}
"
`;

exports[`other > Query 7`] = `
"
{
  "objectNested": {
    "object": {
      "string": true,
      "id": true,
      "int": false
    }
  }
}
--------------
{
  objectNested {
    object {
      string
      id
    }
  }
}
"
`;
